<resources>
    <string name="app_name">Hotel GIS</string>
    <string name="list_hotel">List Hotel</string>
    <string name="add_hotel">Tambah Hotel</string>
    <string name="add_room">Tambah Kamar</string>
    <string name="account_image">Account Image</string>
    <string name="hostel_gis_login">Hotel GIS - Login</string>
    <string name="username_colon">Username :</string>
    <string name="username">Username</string>
    <string name="password_colon">Password :</string>
    <string name="password">Password</string>
    <string name="login_user">Login User</string>
    <string name="login_admin">Login Admin</string>
    <string name="belum_terdaftar_q_registrasi">Belum Terdaftar? Registrasi</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="home_image">Home Image</string>
    <string name="phone_image">Phone Image</string>
    <string name="address">Alamat</string>
    <string name="phone">No. Telepon</string>
    <string name="location">Posisi pada Map</string>
    <string name="room_name">Family Suite</string>
    <string name="list_room">List Kamar</string>
    <string name="edit_data_hotel">Edit Data Hotel</string>
    <string name="edit_data_room">Edit Data Kamar</string>
    <string name="room_quantity">Jumlah Kamar :</string>
    <string name="room_cost">Harga :</string>
    <string name="edit_room">Edit Kamar</string>
    <string name="room_code">Kode :</string>
    <string name="hotel_name">Nama Hotel</string>
    <string name="hotel_address">Alamat Hotel</string>
    <string name="latitude">Latitude</string>
    <string name="hotel_phone">No Telepon</string>
    <string name="longitude">Longitude</string>
    <string name="hotel_foto">Foto Hotel</string>
    <string name="add_data_hotel">Tambah Data Hotel</string>
    <string name="add_data_room">Tambah Data Kamar</string>
    <string name="browse">Browse...</string>
    <string name="room_foto">Foto Kamar</string>
    <string name="room_cost_day">Harga Kamar per Malam</string>
    <string name="roomquantity">Jumlah Kamar</string>
    <string name="roomname">Nama Kamar</string>
    <string name="roomcode">Kode Kamar</string>
    <string name="place_room">Hotel Tempat Kamar</string>
    <string name="user_name">Nama</string>
    <string name="user_email">Email</string>
    <string name="user_no_telp">No Tlp</string>
    <string name="user_password">Password</string>
    <string name="retype_password">Konfirmasi Password</string>
    <string name="registration">Registrasi</string>

    <string-array name="list_hotel_name">
        <item>Hotel Hilton Bandung</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="daftar_kamar">Daftar Kamar</string>
    <string name="email_colon">Email :</string>
    <string name="pesan_kamar">Pesan Kamar</string>
    <string name="logout">Logout</string>
    <string name="pay">Bayar</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="bill">Total Tagihan</string>
    <string name="tekan_marker_pada_peta_untuk_melihat_hotel">Tekan Marker Pada Peta Untuk Melihat Hotel</string>
    <string name="tanggal">Tanggal</string>
    <string name="jumlah_kamar">Jumlah Kamar</string>
    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="no_telepon">No Telepon</string>
    <string name="date_hint">../../...</string>
    <string name="konfirmasi_pemesanan">Konfirmasi Pemesanan</string>
    <string name="silahkan_lakukan_review">Silahkan lakukan review pesanan terlebih dahulu sebelum melanjutkan ke pembayaran</string>
    <string name="detail">Detail</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="data_pemesan">Data Pemesan</string>
    <string name="detail_harga">Detail Harga</string>
    <string name="total">Total</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="lihat_kamar">Lihat Kamar</string>
    <string name="room_facility">Room Facility</string>
    <string name="roomfacility">Fasilitas</string>

</resources>
