<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_code"
            tools:text="@string/room_code"/>

        <TextView
            android:id="@+id/tvRoomCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="F2810"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/card_vertical_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgRoom"
                android:contentDescription="@string/hotel_image"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_weight="0.4"
                tools:src="@drawable/ic_launcher_background"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/layout_horizontal_padding"
                android:paddingTop="@dimen/layout_vertical_padding"
                android:layout_weight="0.6">

                <TextView
                    android:id="@+id/tvRoomName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_vertical_margin"
                    tools:text="@string/room_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_vertical_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_quantity"/>

                    <TextView
                        android:id="@+id/tvRoomQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="210"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/layout_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_cost"/>

                    <TextView
                        android:id="@+id/tvRoomCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rp. 500.000 / malam"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/phone_vertical_margin">

                    <Button
                        android:id="@+id/btnEditRoom"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:text="@string/edit_room"/>

                    <ImageButton
                        android:id="@+id/imgBtnLocation"
                        android:contentDescription="@string/add_room"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:src="@drawable/ic_location_purple"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>