<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_code"
            android:textColor="@color/colorLightBlack"
            tools:text="@string/room_code"/>

        <TextView
            android:id="@+id/tvRoomCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLightBlack"
            tools:text="F2810"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgRoom"
                android:contentDescription="@string/hotel_image"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_weight="0.4"
                tools:src="@drawable/ic_launcher_background"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingTop="8dp"
                android:layout_weight="0.6">

                <TextView
                    android:id="@+id/tvRoomName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    style="@style/TextViewTitlePurple"
                    tools:text="@string/room_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginEnd="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLightBlack"
                        android:text="@string/room_quantity"/>

                    <TextView
                        android:id="@+id/tvRoomQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorLightBlack"
                        tools:text="210"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_marginEnd="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLightBlack"
                        android:text="@string/room_cost"/>

                    <TextView
                        android:id="@+id/tvRoomCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorLightBlack"
                        tools:text="Rp. 500.000 / malam"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp">

                    <Button
                        android:id="@+id/btnEditRoom"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:layout_marginVertical="12dp"
                        android:layout_marginEnd="6dp"
                        style="@style/ButtonBlue"
                        android:text="@string/pesan_kamar"/>

                    <ImageButton
                        android:id="@+id/imgBtnLocation"
                        android:contentDescription="@string/add_room"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:layout_marginVertical="12dp"
                        style="@style/ImageButtonBlack"
                        android:src="@drawable/ic_location_white"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>